[build-system]
requires = [
    "scikit-build-core>=0.11.1",
    "pybind11==2.13.6"
]
build-backend = "scikit_build_core.build"

[project]
dynamic = ["readme"]
name = "asmc-asmc"
version = "1.3.1"
description = "ASMC is a method to efficiently estimate pairwise coalescence time along the genome"
authors = [
    { name = "PalamaraLab (https://palamaralab.github.io/)" }
]
requires-python = ">=3.9"

dependencies = [
    'jupyter',
    'numpy',
    'pandas',
    'matplotlib',
    'asmc-preparedecoding',
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
build.verbose = true
cmake.build-type = "Release"
build.targets = ["asmc_python_bindings"]
wheel.packages = ["src/asmc"]
metadata.readme.provider = "scikit_build_core.metadata.fancy_pypi_readme"

[tool.scikit-build.cmake.define]
ASMC_TESTING = "OFF"
ASMC_PYTHON_BINDINGS = "ON"
ASMC_BUILDING_FROM_PYPROJECT = "ON"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "PyPI_README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "RELEASE_NOTES.md"
